# structured-predictions

./: .gitignore  .readthedocs.yml  CNAME  MANIFEST.in  Makefile  README.md  index - debug.html  index.html  pyproject.toml  requirements-1.txt  requirements.txt  requirements_build.txt  setup.cfg  setup.py
.eggs/numpy-1.19.3-py3.9-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/oldest_supported_numpy-2022.3.27-py3.9.egg/EGG-INFO/: PKG-INFO  RECORD
.github/workflows/: build_wheels.yml  build_wheels_3.9.yml  build_wheels_Manul.yml  build_wheels_Manul_linux.yml  pytest_cp310.yml  pytest_cp311.yml  pytest_cp36.yml  pytest_cp37.yml  pytest_cp38.yml  pytest_cp39.yml  pytesting.yml
assets/css/: stylesheet.css
assets/js/: theme.js
docs/: conf.py  stpredictions.datasets.rst  stpredictions.models.IOKR.rst  stpredictions.models.OK3.tests.rst  stpredictions.models.rst  stpredictions.rst  stpredictions.viz.rst
docs/_build/doctrees/: environment.pickle  index.doctree  (+11 more)
env-stpredictions/: pyvenv.cfg
ex1/: 10-Comparison.ipynb  100-Comparison.ipynb  Datasets_stpackage.ipynb  ex1.ipynb
ex1/.ipynb_checkpoints/: 100-Comparison-checkpoint.ipynb
examples/convert_to_binary/: 100-Comparison.ipynb
examples/ex1/: 50old-Comparison.ipynb  ORIGIN100-Comparison.ipynb  ex1.ipynb  random_forest.ipynb
stpredictions/: __init__.py
stpredictions/convert_to_binary/: 100-Comparison.ipynb
stpredictions/datasets/: 100-EnComparison.ipynb  __init__.py  load_data.py  qm9_utils.py
stpredictions/metrics/: __init__.py
stpredictions/models/: __init__.py
structured-predictions/datasets/: __inti__.py
structured_predictions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/ex1/: 10-Comparison.ipynb  100-Comparison.ipynb  10old-Comparison.ipynb  50-Comparison.ipynb  50old-Comparison.ipynb  ex2.ipynb
tests/tests_DIOKR/: Demo_DeepIOKR_bibtex.py  test_estimator.py  test_kernel.py  test_net.py  test_utils.py
tests/tests_IOKR/: IOKR.py  ISOKR.py  SIOKR.py  SISOKR.py
tests/tests_OK3/: digits_image_completion.py  example_utilisation.py  example_utilisation_forest.py  exemple_utilisation.py  exemple_utilisation_forest.py  test_classification.py  test_classification_forest.py  test_complementary.py  test_export.py  test_forest_clf_and_reg.py  test_regression.py  test_regression_forest.py  test_tree_clf_and_reg.py
(+91 files in other folders)
